5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4067/executions/1601_1800.log
== SUBMITION (2019-03-25 02:10:02) 
-- CODE:
a = float(input ("primeira variável"))
b = float(input("segunda variável"))
c = float(input("terceira variável"))
divisao = (a**2 + b**2 + c**2)/(a+b+c)
print("o resultado da divisão e {}"round(divisao, 6).format(divisao))
-- EXECUTION TIME:
0.203577
-- ERROR:
  File "/home/codebench/codes/1601/1800/main.py", line 5
    print("o resultado da divis\xe3o e {}"round(divisao, 6).format(divisao))
                                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:48:33) 
-- CODE:
a = float(input ("primeira variável"))
b = float(input("segunda variável"))
c = float(input("terceira variável"))
divisao = (a**2 + b**2 + c**2)/(a+b+c)
print("o resultado da divisão e {}"round(divisao, 6).format(divisao))
-- EXECUTION TIME:
0.180851
-- ERROR:
  File "/home/codebench/codes/1601/1800/main.py", line 5
    print("o resultado da divis\xe3o e {}"round(divisao, 6).format(divisao))
                                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:48:36) 
-- CODE:
a = float(input ("primeira variável"))
b = float(input("segunda variável"))
c = float(input("terceira variável"))
divisao = (a**2 + b**2 + c**2)/(a+b+c)
print("o resultado da divisão e {}"round(divisao, 6).format(divisao))
-- EXECUTION TIME:
0.164601
-- ERROR:
  File "/home/codebench/codes/1601/1800/main.py", line 5
    print("o resultado da divis\xe3o e {}"round(divisao, 6).format(divisao))
                                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:52:25) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
p =a**2+b**2+c**2
soma = a+b+c
print(round(p/soma, 6))
-- EXECUTION TIME:
0.137684
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:53:00) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
p =a**2+b**2+c**2/a+b+c
print(round(p, 6))
-- EXECUTION TIME:
0.206242
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
1125.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
216496.276596
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
22622.044444
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:53:03) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
p =a**2+b**2+c**2/a+b+c
print(round(p, 6))
-- EXECUTION TIME:
0.186599
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
1125.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
216496.276596
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
22622.044444
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:53:07) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
p =a**2+b**2+c**2/a+b+c
print(round(p, 6))
-- EXECUTION TIME:
0.138668
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
1125.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
216496.276596
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
22622.044444
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:54:18) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
p =(a**2+b**2+c**2)/(a+b+c)
print(round(p, 6))
-- EXECUTION TIME:
0.186228
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:54:35) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
p =(a**2+b**2+c**2)/(a+b+c)
print(round(p, 6))
-- EXECUTION TIME:
0.133023
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:54:44) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
p = a**2+b**2+c**2/(a+b+c)
print(round(p, 6))
-- EXECUTION TIME:
0.180409
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
1037.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
215349.365482
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
22500.018868
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:00:25) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
p = (a**2+b**2+c*2)/(a+b+c)
print(round(p, 6))
-- EXECUTION TIME:
0.193676
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
14.466667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
219.213198
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:00:56) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
p = (a**2+b**2+c*2)/(a+b+c)
print(round(p, 6))
-- EXECUTION TIME:
0.142875
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
14.466667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
219.213198
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:00:59) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
p = (a**2+b**2+c*2)/(a+b+c)
print(round(p, 6))
-- EXECUTION TIME:
0.197235
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
14.466667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
219.213198
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:01:08) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
p = (a**2+b**2+c*2)/(a+b+c)
print(round(p,6))
-- EXECUTION TIME:
0.146018
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
14.466667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
219.213198
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:01:12) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
p = (a**2+b**2+c*2)/(a+b+c)
print(round(p,06))
-- EXECUTION TIME:
0.151477
-- ERROR:
  File "/home/codebench/codes/1601/1800/main.py", line 5
    print(round(p,06))
                   ^
SyntaxError: invalid token

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:01:15) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
p = (a**2+b**2+c*2)/(a+b+c)
print(round(p,0.6))
-- EXECUTION TIME:
0.154553
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/1800/main.py", line 5, in <module>
    print(round(p,0.6))
TypeError: 'float' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:02:04) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
p = (a**2+b**2+c*2)/(a+b+c)
print(round(p, 6))
-- EXECUTION TIME:
0.196725
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
14.466667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
219.213198
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:02:04) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
p = (a**2+b**2+c*2)/(a+b+c)
print(round(p, 6))
-- EXECUTION TIME:
0.132304
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
14.466667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
219.213198
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:02:06) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
p = (a**2+b**2+c*2)/(a+b+c)
print(round(p, 6))
-- EXECUTION TIME:
0.211673
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
14.466667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
219.213198
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:02:06) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
p = (a**2+b**2+c*2)/(a+b+c)
print(round(p, 6))
-- EXECUTION TIME:
0.204673
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
14.466667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
219.213198
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:02:06) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
p = (a**2+b**2+c*2)/(a+b+c)
print(round(p, 6))
-- EXECUTION TIME:
0.268759
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
219.213198
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
14.466667
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
219.213198
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:02:06) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
p = (a**2+b**2+c*2)/(a+b+c)
print(round(p, 6))
-- EXECUTION TIME:
0.349718
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
219.213198
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
219.213198
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:02:06) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
p = (a**2+b**2+c*2)/(a+b+c)
print(round(p, 6))
-- EXECUTION TIME:
0.490509
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
219.213198
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
106.150943
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
14.466667
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:02:07) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
p = (a**2+b**2+c*2)/(a+b+c)
print(round(p, 6))
-- EXECUTION TIME:
0.469943
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
106.150943
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
14.466667
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:02:07) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
p = (a**2+b**2+c*2)/(a+b+c)
print(round(p, 6))
-- EXECUTION TIME:
0.446969
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1601/1800/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:02:07) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
p = (a**2+b**2+c*2)/(a+b+c)
print(round(p, 6))
-- EXECUTION TIME:
0.52382
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
14.466667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:

-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:02:07) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
p = (a**2+b**2+c*2)/(a+b+c)
print(round(p, 6))
-- EXECUTION TIME:
0.416497
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
106.150943
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
219.213198
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:02:07) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
p = (a**2+b**2+c*2)/(a+b+c)
print(round(p, 6))
-- EXECUTION TIME:
0.458216
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
219.213198
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
106.150943
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:02:10) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
p = (a**2+b**2+c*2)/(a+b+c)
print(round(p, 6))
-- EXECUTION TIME:
0.140398
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
14.466667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
219.213198
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:04:21) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
p = (a**2+b**2+c**2)/(a+b+c)
print(round(p, 6))
-- EXECUTION TIME:
0.157654
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:04:26) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
p = (a**2+b**2+c**2)/(a+b+c)
print(round(p, 6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:05:02) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
p = (a**2+b**2+c**2)/(a+b+c)
print(round(p, 7))
-- EXECUTION TIME:
0.150255
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
